--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@types/react-helmet": "^6.1.11",
+    "@types/react-redux": "^7.1.33",
     "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.34",
     "react": "^18.3.1",
